service__cluster_ip.yml
apiVersion: v1
kind: Service
metadata:
  name: short-app-clusterip
spec:
  type: ClusterIP
  ports:
    - port: 80
      protocol: TCP
  selector:
    components: frontend
---
kind: Service
apiVersion: v1
metadata:
  name:  short-app-api-clusterip
spec:
  type:  ClusterIP
  selector:
    acomponents: backend
  ports:
    - port:  3000
      protocol: TCP
